Manutenção nas imagens e favicon

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Movimento Futuro</title>
 
+  <link rel="shortcut icon" href="assets/img/Logo MovimentoFuturo.png" type="image/x-icon">
+
   <link rel="stylesheet" href="style.css">
 
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
@@ -20,7 +22,7 @@
 <body>
   <header>
     <div class="container-header">
-      <a href="#inicio"><img src="assets/img/Logo MovimentoFuturo.png" alt="MovimentoFuturo" class="logo-header"></a>
+      <a href="#inicio"><img src="assets/img/Logo MovimentoFuturo.png" loading="lazy" alt="MovimentoFuturo" class="logo-header"></a>
       
 
       <button class="menu-hamburguer" id="menu-hamburguer" aria-label="Abrir Menu">
@@ -180,19 +182,19 @@
       <div class="cards-container">
 
         <div class="card">
-          <img src="assets/img/convidado 1.jpg" alt="Foto do palestrante">
+          <img src="assets/img/convidado 1.jpg" alt="Foto do palestrante" loading="lazy">
           <h3>Júlia Perttit</h3>
           <p>Especialista em temas sociais e participação cidadã.</p>
         </div>
 
         <div class="card">
-          <img src="assets/img/convidado 2.jpg" alt="Foto do palestrante">
+          <img src="assets/img/convidado 2.jpg" alt="Foto do palestrante" loading="lazy">
           <h3>Marcos de Andrade</h3>
           <p>Pesquisador e mentor em desenvolvimento juvenil.</p>
         </div>
 
         <div class="card">
-          <img src="assets/img/convidado 3.jpg" alt="Foto do palestrante">
+          <img src="assets/img/convidado 3.jpg" alt="Foto do palestrante" loading="lazy">
           <h3>Caspian Gonzales</h3>
           <p>Ativista e líder comunitário em projetos sociais.</p>
         </div>
@@ -319,7 +321,7 @@
 
         <div class="footer-dev">
           <a href="https://marlonschulze.github.io/DevFreela/" target="_blank">
-            <img src="assets/img/devfreela logo.png" alt="Logo da empresa" />
+            <img src="assets/img/devfreela logo.png" alt="Logo da empresa" loading="lazy" />
           </a>
         </div>
 
